baml_language/crates/baml_lsp_actions_tests/test_files/syntax/client/unknown_prop.baml
client<llm> MyClient {
  provider baml-openai-chat
  myExtraProp "hello"
  options {
    max_tokens 100
  }
}

// error: Error validating: Unknown field `myExtraProp` in client
//   -->  client/unknown_prop.baml:3
//    |
//  2 |   provider baml-openai-chat
//  3 |   myExtraProp "hello"
//    |

//----
//- diagnostics
// Error: Unknown field `myExtraProp` in client. Only `provider` and `options` are supported.
//    в•ӯв”Җ[ client_unknown_prop.baml:3:3 ]
//    в”Ӯ
//  3 в”Ӯ   myExtraProp "hello"
//    в”Ӯ   в”Җв”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җ  
//    в”Ӯ        в•°в”Җв”Җв”Җв”Җв”Җв”Җв”Җ Unknown field `myExtraProp` in client. Only `provider` and `options` are supported.
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0027
// в”Җв”Җв”Җв•Ҝ
